--- a/.github/workflows/jira_attachment_handler.yml
+++ b/.github/workflows/jira_attachment_handler.yml
@@ -4,36 +4,31 @@ on:
   workflow_dispatch:
     inputs:
       issue_key:
-        description: 'Jira issue key'
         required: true
         type: string
       attachments:
-        description: 'JSON string of all attachments'
         required: true
         type: string
 
 jobs:
-  process-attachments:
+  process:
     runs-on: ubuntu-latest
-
-    env:
-      SERVICENOW_URL: ${{ secrets.SERVICENOW_URL }}
-      SERVICENOW_USER: ${{ secrets.SERVICENOW_USER }}
-      SERVICENOW_PASS: ${{ secrets.SERVICENOW_PASS }}
-
     steps:
-      - name: Checkout Repo
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Setup Groovy
-        uses: sdkman/sdkman-action@v1
+      - name: Set up Java
+        uses: actions/setup-java@v3
         with:
-          candidate: groovy
-          version: '4.0.6'
+          distribution: 'temurin'
+          java-version: '17'
 
-      - name: Save input files
+      - name: Install Groovy
+        run: sudo apt-get install -y groovy
+
+      - name: Save inputs
         run: |
-          echo '${{ github.event.inputs.issue_key }}' > issue_key.txt
+          echo "${{ github.event.inputs.issue_key }}" > issue_key.txt
           echo '${{ github.event.inputs.attachments }}' > attachments.json
 
       - name: Run Groovy Script
