--- a/.github/workflows/jira_attachment_handler.yml
+++ b/.github/workflows/jira_attachment_handler.yml
@@ -4,26 +4,39 @@ on:
   workflow_dispatch:
     inputs:
       issue_key:
+        description: 'Jira Issue Key'
         required: true
-        type: string
+      comment:
+        description: 'Comment body'
+        required: false
+      customfield_10511:
+        description: 'Custom field'
+        required: false
       attachments:
-        required: true
-        type: string
+        description: 'List of attachments'
+        required: false
 
 jobs:
-  process:
+  process_attachments:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Groovy
-        uses: wtfjoke/setup-groovy@v1
+      - name: Set up Java & Groovy
+        uses: actions/setup-java@v3
         with:
-          groovy-version: '4.0.15'
+          distribution: 'temurin'
+          java-version: '17'
 
-      - name: Run Groovy script
+      - name: Install Groovy
+        run: sudo apt-get install -y groovy
+
+      - name: Run Groovy Script
         run: groovy scripts/process_latest_attachments.groovy
         env:
           INPUT_ISSUE_KEY: ${{ github.event.inputs.issue_key }}
+          INPUT_COMMENT: ${{ github.event.inputs.comment }}
+          INPUT_CUSTOMFIELD_10511: ${{ github.event.inputs.customfield_10511 }}
           INPUT_ATTACHMENTS: ${{ github.event.inputs.attachments }}
+          WEBHOOK_URL: https://webhook-test.com/322cb6f50793b78c66e6facd5432a6f1
