--- a/.github/workflows/jira_changelog_sender.yml
+++ b/.github/workflows/jira_changelog_sender.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Groovy
-        uses: sdkman/sdkman-action@v1
-        with:
-          sdk: groovy
+      - name: Install Groovy
+        run: |
+          sudo apt update
+          sudo apt install -y groovy
 
       - name: Run Groovy Script
         run: groovy scripts/changelog_to_servicenow.groovy "${{ github.event.inputs.issue_key }}" "${{ github.event.inputs.issue_type }}"
