--- a/.github/workflows/jira_email_notifier.yml
+++ b/.github/workflows/jira_email_notifier.yml
@@ -8,19 +8,21 @@ on:
         required: true
 
 jobs:
-  notify:
+  send-email:
     runs-on: ubuntu-latest
+
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
       - name: Install Groovy
         run: |
-          sudo apt-get update
-          sudo apt-get install -y groovy
+          sudo apt update
+          sudo apt install -y groovy
 
-      - name: Download and Run Groovy Script
+      - name: Run Groovy script
         env:
           ISSUE_KEY: ${{ github.event.inputs.issue_key }}
           SMTP_EMAIL: ${{ secrets.SMTP_EMAIL }}
           SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-        run: |
-          curl -O scripts/EmailSender.groovy https://raw.githubusercontent.com/saurabhjangid17/saurabh/main/scripts/EmailSender.groovy
-          groovy scripts/EmailSender.groovy
+        run: groovy scripts/EmailSender.groovy
