--- a/.github/workflows/jira_issue_handler.yml
+++ b/.github/workflows/jira_issue_handler.yml
@@ -6,9 +6,6 @@ on:
       issue_key:
         description: 'Jira Issue Key'
         required: true
-      jira_auth:
-        description: 'Base64 Encoded Jira Auth'
-        required: true
 
 jobs:
   handle-issue:
@@ -32,8 +29,7 @@ jobs:
       - name: Create payload.json from Jira inputs
         run: |
           echo '{
-            "issue_key": "${{ github.event.inputs.issue_key }}",
-            "jira_auth": "${{ github.event.inputs.jira_auth }}"
+            "issue_key": "${{ github.event.inputs.issue_key }}"
           }' > payload.json
 
       - name: Show payload.json (optional for debug)
