--- a/.github/workflows/send_jira_updates.yml
+++ b/.github/workflows/send_jira_updates.yml
@@ -1,7 +1,12 @@
 name: Send Jira Updates to ServiceNow
 
 on:
-  workflow_dispatch: # or triggered from Jira
+  workflow_dispatch:
+    inputs:
+      issue_keys:
+        description: 'Comma-separated issue keys'
+        required: true
+        type: string
 
 jobs:
   update:
