--- a/.github/workflows/send-to-snow.yml
+++ b/.github/workflows/send-to-snow.yml
@@ -1,34 +1,36 @@
-name: Send Issue Data to ServiceNow
+name: Send Jira Issues to ServiceNow
 
 on:
   workflow_dispatch:
     inputs:
-      issue_keys:
-        description: 'Comma-separated Jira Issue Keys (example: DP-101,DP-102)'
+      issue_data:
+        description: 'Jira Issue Key(s) in JSON Array (e.g., [{"key":"DP-62"}, {"key":"DP-63"}])'
         required: true
 
 jobs:
   send-to-servicenow:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17'  # Groovy requires Java 8 or later
+          java-version: '17'
 
       - name: Install Groovy
         run: |
           sudo apt-get update
           sudo apt-get install -y groovy
 
-      - name: Run Groovy script to send data to ServiceNow
-        env:
-          ISSUE_DATA: ${{ inputs.issue_keys }}
-          JIRA_AUTH: ${{ secrets.JIRA_AUTH }}
+      - name: Run Groovy Script
         run: |
           echo "Starting Groovy script execution"
           groovy scripts/sendToServiceNow.groovy
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME }}
+          ISSUE_DATA: ${{ github.event.inputs.issue_data }}
+          JIRA_AUTH: ${{ secrets.JIRA_AUTH }}
