--- a/.github/workflows/send-to-snow.yml
+++ b/.github/workflows/send-to-snow.yml
@@ -1,36 +1,33 @@
-name: Send Jira Issues to ServiceNow
+name: Send to ServiceNow
 
 on:
   workflow_dispatch:
     inputs:
       issue_data:
-        description: 'Jira Issue Key(s) in JSON Array (e.g., [{"key":"DP-62"}, {"key":"DP-63"}])'
+        description: 'Issue data as JSON string (e.g., [{"key": "DP-62"}])'
         required: true
 
 jobs:
-  send-to-servicenow:
+  sendToSNOW:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - name: Set up Java
-        uses: actions/setup-java@v4
+      - name: Set up Java and Groovy
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
       - name: Install Groovy
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y groovy
+        run: sudo apt-get install -y groovy
 
-      - name: Run Groovy Script
+      - name: Run Groovy script
+        env:
+          ISSUE_DATA: ${{ inputs.issue_data }}
+          JIRA_AUTH: ${{ secrets.JIRA_AUTH }}
         run: |
           echo "Starting Groovy script execution"
           groovy scripts/sendToServiceNow.groovy
-        env:
-          JAVA_HOME: ${{ env.JAVA_HOME }}
-          ISSUE_DATA: ${{ github.event.inputs.issue_data }}
-          JIRA_AUTH: ${{ secrets.JIRA_AUTH }}
